argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 443
  rules:
  - host: my-argocd.myhostname.it
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
      - my-argocd.myhostname.it
    secretName: mysecret.it
